Fix rightmost tooltip being off-screen when button row wraps

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -355,11 +355,11 @@
     }
 
     div.tooltip {
-      display: inline;
+      display: inline-block;
       position: relative;
 
       > span {
-        bottom: 42px;
+        bottom: 64px;
         display: none;
         margin-left: 0;
         position: absolute;
